# SC3K

./: .gitignore  Dockerfile  data_loader.py  generate_dataset.py  log_pcds.py  network.py  prepare_cloud.py  pyproject.toml  remove_semantic_id.py  rerun_commands.sh  run_docker.sh  run_on_pcd.py  test.py  train.py  visualizations.py
.github/instructions/: basic.instructions.md
config/: config.yaml  config_generated.yaml  config_generated_test.yaml
test/airplane/.hydra/: config.yaml  hydra.yaml
